# CARLcpp

./: CMakeLists.txt  README.md
cmake/: carlcpp-config.cmake.in
include/carl/: boost_ext.hpp  carlcpp.in.hpp
